# src/payment/app.js
@@ -1,7 +1,8 @@
-import { PrismaClient } from '@prisma/client'
 import express from 'express'
 import valid_credit_card from './helpers/creditCardValidator.js'
-const prisma = new PrismaClient()
+import isUUID from './helpers/uuidValidator.js'
+import prisma from './libs/prisma.js'
+
 const app = express()
 
 app.use(
@@ -10,11 +11,10 @@ app.use(
       if (buf.length === 0) {
         return
       }
-
       try {
         JSON.parse(buf)
       } catch (e) {
-        res.status(400).send('Bad Request')
+        res.status(400).send({ message: 'Bad Request' })
       }
     }
   })
@@ -24,7 +24,7 @@ app.get('/paymentMethod/:userId', async (req, res) => {
   try {
     const userId = req.params.userId
 
-    if (isNaN(parseInt(userId))) {
+    if (!isUUID(userId)) {
       return res.status(400).json({ message: 'Invalid user ID' })
     }
 
@@ -61,6 +61,7 @@ app.get('/paymentMethod/:userId', async (req, res) => {
         }
       },
       select: {
+        id: true,
         paymentType: true
       }
     })
@@ -72,10 +73,12 @@ app.get('/paymentMethod/:userId', async (req, res) => {
         paymentType: 'CREDIT_CARD'
       },
       select: {
+        id: true,
         paymentType: true,
         cardNumber: true,
         cardExpiration: true,
-        cardCvv: true
+        cardCvv: true,
+        cardHolder: true
       }
     })
 
@@ -96,7 +99,7 @@ app.get('/paymentMethod/:userId', async (req, res) => {
 app.post('/paymentMethod/:userId', async (req, res) => {
   const userId = req.params.userId
 
-  if (isNaN(parseInt(userId))) {
+  if (!isUUID(userId)) {
     return res.status(400).json({ message: 'Invalid user ID' })
   }
 
@@ -105,9 +108,9 @@ app.post('/paymentMethod/:userId', async (req, res) => {
       .status(400)
       .json({ message: 'Invalid number of payment methods' })
   }
-  const { number, expiration, cvv } = req.body[0]
+  const { number, expiration, cvv, card_holder } = req.body[0]
 
-  if (!number || !expiration || !cvv) {
+  if (!number || !expiration || !cvv || !card_holder) {
     return res.status(400).json({ message: 'Missing parameters' })
   }
 
@@ -131,14 +134,110 @@ app.post('/paymentMethod/:userId', async (req, res) => {
         paymentType: 'CREDIT_CARD',
         cardNumber: number,
         cardExpiration: expiration,
-        cardCvv: cvv
+        cardCvv: cvv,
+        cardHolder: card_holder
       }
     })
   } catch (e) {
-    return res.status(409).json(e.message)
+    return res.status(409).json({ message: e })
   }
 
   return res.status(200).json({ message: 'Card created' })
+})
+
+app.delete('/paymentMethod/:paymentId', async (req, res) => {
+  const paymentId = req.params.paymentId
+
+  if (!isUUID(paymentId)) {
+    return res.status(400).json({ message: 'Invalid payment ID' })
+  }
+
+  try {
+    await prisma.paymentMethod.delete({
+      where: {
+        id: paymentId
+      }
+    })
+  } catch (e) {
+    return res.status(409).json({ message: e.meta.cause })
+  }
+
+  res.status(200).json({ message: 'Payment method deleted' })
+})
+
+app.post('/payment/:userId', async (req, res) => {
+  const userId = req.params.userId
+
+  if (!isUUID(userId)) {
+    return res.status(400).json({ message: 'Invalid user ID' })
+  }
+
+  if (req.body[0] === undefined) {
+    return res.status(400).json({ message: 'No info provided' })
+  }
+  const { orderId, paymentMethodId, amount } = req.body[0]
+
+  if (isNaN(amount)) {
+    return res
+      .status(400)
+      .json({ message: 'The provided amount is not a number' })
+  }
+
+  if (!isUUID(orderId) || !isUUID(paymentMethodId)) {
+    return res.status(400).json({ message: 'Invalid ID' })
+  }
+
+  if (!orderId || !paymentMethodId || !amount) {
+    return res.status(400).json({ message: 'Missing parameters' })
+  }
+
+  const belongsToUser = await prisma.paymentMethod.findFirst({
+    where: {
+      id: paymentMethodId,
+      userId: userId
+    }
+  })
+
+  if (!belongsToUser) {
+    return res
+      .status(403)
+      .json({ message: 'Payment method does not belong to user' })
+  }
+
+  try {
+    await prisma.payment.create({
+      data: {
+        orderId: orderId,
+        userId: userId,
+        amount: amount,
+        paymentMethod: paymentMethodId
+      }
+    })
+    return res.status(200).json({ message: 'Payment created' })
+  } catch (e) {
+    return res.status(409).json({ message: e.meta.cause })
+  }
+})
+
+app.delete('/payment/:paymentId', async (req, res) => {
+  const paymentId = req.params.paymentId
+
+  if (!isUUID(paymentId)) {
+    return res.status(400).json({ message: 'Invalid payment ID' })
+  }
+
+  try {
+    await prisma.payment.delete({
+      where: {
+        id: paymentId
+      }
+    })
+  } catch (e) {
+    console.log(e)
+    return res.status(409).json({ message: e })
+  }
+
+  res.status(200).json({ message: 'Payment deleted' })
 })
 
 export default app
